--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,47 +1,64 @@
----
 # tasks file for enrollment_ansible
 
-- name: ensure {{ adm_group }} group exists
-  group:
-    name: "{{ adm_group }}"
-    gid: "{{ gid_adm_group }}" 
+#- name: register the foreman hostname
+#  shell: "grep '^hostname = sat6.u-pec.fr' /etc/rhsm/rhsm.conf"
+#  ignore_errors: yes
+#  register: grep_return
 
-- name: ensure remote execution user {{ rex_user }} exists
-  user:
-    name: "{{ rex_user }}"
-    home: "{{ home_dir }}"
-    group: "{{ adm_group }}"
-    expires: -1
+- name: block to run when the host is not registered to the Satellite
+  block:
+#  when: grep_return.rc == 1
+    - name: ensure you have the latest version of subscription manager 
+      yum:
+        name: subscription-manager
+        state: latest
+        
+    - name: clean the subscription manager config
+      shell: subscription-manager clean
 
-- name: ensure {{ folder }} folder exists
-  file:
-    path: "{{ folder }}"
-    state: directory
-    mode: '0700'
-    owner: "{{ rex_user }}"
-    group: "{{ adm_group }}"
-    
-- name: ensure {{ rex_user }} user is in the sudoers
-  lineinfile:
-    path: /etc/sudoers
-    state: present
-    line: "{{ rex_user }} ALL = (root) NOPASSWD: ALL"
+    - name: disable subscription-manager plugin for yum
+      lineinfile:
+        path: /etc/yum/pluginconf.d/subscription-manager.conf
+        regexp: '^enabled='
+        line: 'enabled=0'
 
-- name: download bootstrap.py from {{ foreman_fqdn }}
-  get_url:
-    dest: "{{ bootstrap_path }}"
-    url: "{{ download_method }}://{{ foreman_fqdn }}/pub/bootstrap.py"
+    - name: remove previous registration data
+      file:
+        path: /etc/pki/consumed/cert.pem
+        state: absent
 
-- name: generate bootstrap.py arguments
-  set_fact:
-    bootstrap_args: "--server {{ foreman_fqdn }} --organization '{{ organization }}' --location '{{ location }}' --activationkey '{{ activationkey }}' --download-method {{ download_method }} --rex --rex-user {{ rex_user }} --enablerepos {{ repos }}"
-    bootstrap_foreman_args: "{% if password != '' %}--login '{{ login }}' --password '{{ password }}' --hostgroup '{{ hostgroup }}'{% else %}--skip foreman{% endif %}"
-    bootstrap_additional_args: "--skip katello-agent --operatingsystem 'RHEL Server {{ ansible_distribution_version }}' --force"
+    - name: remove Satellite 5 registration locally
+      file:
+        path: /etc/sysconfig/rhn/systemid
+        state: absent
 
-- name: run bootstrap.py
-  command: "python {{ bootstrap_path }} {{ bootstrap_args }} {{ bootstrap_foreman_args }} {{ bootstrap_additional_args }}"
+    - name: ensure remote execution user {{ rex_user }} exists
+      user:
+        name: "{{ rex_user }}"
+        home: "{{ home_dir }}"
+        expires: -1
 
-- name: remove bootstrap.py
-  file:
-    path: "{{ bootstrap_path }}"
-    state: absent
+    - name: ensure {{ rex_user }} user is in the sudoers
+      lineinfile:
+        path: /etc/sudoers.d/sudo_nopasswd
+        state: present
+        line: "{{ rex_user }} ALL = (root) NOPASSWD: ALL"
+
+    - name: download bootstrap.py from {{ foreman_fqdn }}
+      get_url:
+        dest: "{{ bootstrap_path }}"
+        url: "{{ download_method }}://{{ foreman_fqdn }}/pub/bootstrap.py"
+
+    - name: generate bootstrap.py arguments
+      set_fact:
+        bootstrap_args: "--server {{ foreman_fqdn }} --organization '{{ organization }}' --location '{{ location }}' --activationkey '{{ activationkey }}' --download-method {{ download_method }} --rex --rex-user {{ rex_user }} --enablerepos {{ repos }}"
+        bootstrap_foreman_args: "{% if password != '' %}--login '{{ login }}' --password '{{ password }}' --hostgroup '{{ hostgroup }}'{% else %}--skip foreman{% endif %}"
+        bootstrap_additional_args: "--skip katello-agent --skip puppet --operatingsystem 'RHEL Server {{ ansible_distribution_version }}' --force"
+
+    - name: run bootstrap.py
+      command: "python {{ bootstrap_path }} {{ bootstrap_args }} {{ bootstrap_foreman_args }} {{ bootstrap_additional_args }}"
+
+    - name: remove bootstrap.py
+      file:
+        path: "{{ bootstrap_path }}"
+        state: absent
