--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -40,7 +40,7 @@
 
     - name: ensure {{ rex_user }} user is in the sudoers
       lineinfile:
-        path: /etc/sudoers.d/sudo_nopasswd
+        path: "{{ sudoers }}"
         state: present
         line: "{{ rex_user }} ALL = (root) NOPASSWD: ALL"
 
