--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,6 +9,9 @@
 rex_user: 
 home_dir: 
 
+# path to the sudoers file
+sudoers:
+
 # Repos to activate on the hosts
 #repos: "rhel-7-server-satellite-tools-6.7-rpms,rhel-server-rhscl-7-rpms,rhel-7-server-rh-common-rpms,rhel-7-server-rpms,rhel-7-server-extras-rpms"
 repos: "*"
