--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,16 +1,5 @@
+---
 # tasks file for enrollment_ansible
-
-- name: Register the retrun code for subscription-manager
-  shell:
-    cmd: "subscription-manager repos"
-    warn: no
-  register: subscription_manager
-
-- name: Ensure you have the latest version of subscription-manager
-   yum:
-     name: subscription-manager
-     state: latest
-   when: subscription_manager.stdout != "This system has no repositories available through subscriptions."
 
 - name: Clean the subscription-manager config
   shell: subscription-manager clean
@@ -66,9 +55,9 @@
 
 - name: Generate bootstrap.py arguments
   set_fact:
-    bootstrap_args: "--server {{ foreman_fqdn }} --organization '{{ organization }}' --location '{{ location }}' --activationkey '{{ activationkey }}' --download-method {{ download_method }} --rex --rex-user {{ rex_user }} --enablerepos {{ repos }}"
-    bootstrap_foreman_args: "{% if password != '' %}--login '{{ login }}' --password '{{ password }}' --hostgroup '{{ hostgroup }}'{% else %}--skip foreman{% endif %}"
-    bootstrap_additional_args: "--skip katello-agent --skip puppet --operatingsystem '{{ ansible_distribution }} {{ ansible_distribution_version }}' --fqdn {{ ansible_hostname }} --force"
+    bootstrap_args: "--server '{{ foreman_fqdn }}' --organization '{{ organization }}' --location '{{ location }}' --download-method '{{ download_method }}' --fqdn '{{ ansible_hostname }}' --enablerepos '{{ repos }}'"
+    bootstrap_foreman_args: "{% if password != '' %}--login '{{ login }}' --password '{{ password }}' --hostgroup '{{ hostgroup }}'{% else %}--skip foreman{% endif %} --activationkey '{{ activationkey }}'"
+    bootstrap_additional_args: "--skip katello-agent --skip puppet --force --rex --rex-user '{{ rex_user }}' --operatingsystem '{{ ansible_distribution }} {{ ansible_distribution_version }}'"
 
 - name: Run bootstrap.py
   shell: "python {{ bootstrap_path }} {{ bootstrap_args }} {{ bootstrap_foreman_args }} {{ bootstrap_additional_args }}"
